[package]
name = "hyena"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChangeCaps/hyena"
description = "A simple async task pool"
keywords = ["async", "task", "pool"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.7"
async-executor = "1.4"
concurrent-queue = "1.2"
futures-lite = "1.12"
num_cpus = "1.13"
